Driver issues resolved

--- a/BetaBedsTests/App.config
+++ b/BetaBedsTests/App.config
@@ -19,11 +19,17 @@
             <setting name="TestingEnvironment" serializeAs="String">
                 <value>Dev</value>
             </setting>
+            <setting name="SeleniumExecuteLocally" serializeAs="String">
+                <value>true</value>
+            </setting>
+            <setting name="CustomURL" serializeAs="String">
+                <value>http://local.betabeds.com/</value>
+            </setting>
             <setting name="SeleniumBrowser" serializeAs="String">
                 <value>chrome</value>
             </setting>
-            <setting name="SeleniumExecuteLocally" serializeAs="String">
-                <value>True</value>
+            <setting name="ProxyEnabled" serializeAs="String">
+                <value>true</value>
             </setting>
         </BetaBedsTests.Properties.Settings>
     </userSettings>
