--- a/BetaBedsTests/Properties/Settings.settings
+++ b/BetaBedsTests/Properties/Settings.settings
@@ -14,10 +14,16 @@
     <Setting Name="TestingEnvironment" Type="System.String" Scope="User">
       <Value Profile="(Default)">Dev</Value>
     </Setting>
-    <Setting Name="SeleniumBrowser" Type="System.String" Scope="User">
-      <Value Profile="(Default)">firefox</Value>
-    </Setting>
     <Setting Name="SeleniumExecuteLocally" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="CustomURL" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://local.betabeds.com/</Value>
+    </Setting>
+    <Setting Name="SeleniumBrowser" Type="System.String" Scope="User">
+      <Value Profile="(Default)">chrome</Value>
+    </Setting>
+    <Setting Name="ProxyEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
