--- a/BetaBedsTests/App.config
+++ b/BetaBedsTests/App.config
@@ -4,6 +4,7 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="BetaBedsTests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+      <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     </configSections>
     <userSettings>
         <BetaBedsTests.Properties.Settings>
@@ -16,8 +17,9 @@
             <setting name="HttpPort" serializeAs="String">
                 <value>3128</value>
             </setting>
-            <setting name="TestingEnvironment" serializeAs="String">
-                <value>Dev</value>
+          <!--Test Enviorment Options: Custom(Must provide 'CustomURL' with it), Local, Dev, QA, Staging, Live-->
+          <setting name="TestingEnvironment" serializeAs="String">
+                <value>QA</value> 
             </setting>
             <setting name="SeleniumExecuteLocally" serializeAs="String">
                 <value>true</value>
@@ -25,6 +27,7 @@
             <setting name="CustomURL" serializeAs="String">
                 <value>http://local.betabeds.com/</value>
             </setting>
+          <!--Selenium Browser Options: firefox, chrome-->
             <setting name="SeleniumBrowser" serializeAs="String">
                 <value>chrome</value>
             </setting>
@@ -33,4 +36,18 @@
             </setting>
         </BetaBedsTests.Properties.Settings>
     </userSettings>
+  <log4net>
+    <root>
+      <level value="ALL" />
+      <appender name="MyAppender" type="log4net.Appender.ConsoleAppender">
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%message%newline" />
+        </layout>
+      </appender>
+    </root>
+  </log4net>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  
 </configuration>
