--- a/BetaBedsTests/App.config
+++ b/BetaBedsTests/App.config
@@ -9,7 +9,7 @@
     <userSettings>
         <BetaBedsTests.Properties.Settings>
             <setting name="SeleniumRemoteServerURL" serializeAs="String">
-                <value>http://192.168.2.35:4444/wd/hub</value>
+                <value>http://10.0.1.55:4444/wd/hub</value>
             </setting>
             <setting name="HttpProxy" serializeAs="String">
                 <value>52.16.27.130</value>
@@ -17,22 +17,20 @@
             <setting name="HttpPort" serializeAs="String">
                 <value>3128</value>
             </setting>
-          <!--Test Enviorment Options: Custom(Must provide 'CustomURL' with it), Local, Dev, QA, Staging, Live-->
-          <setting name="TestingEnvironment" serializeAs="String">
-                <value>QA</value> 
-            </setting>
-            <setting name="SeleniumExecuteLocally" serializeAs="String">
-                <value>true</value>
-            </setting>
             <setting name="CustomURL" serializeAs="String">
                 <value>http://local.betabeds.com/</value>
             </setting>
-          <!--Selenium Browser Options: firefox, chrome-->
             <setting name="SeleniumBrowser" serializeAs="String">
-                <value>chrome</value>
+                <value>firefox</value>
+            </setting>
+            <setting name="TestingEnvironment" serializeAs="String">
+                <value>Live</value>
+            </setting>
+            <setting name="SeleniumExecuteLocally" serializeAs="String">
+                <value>False</value>
             </setting>
             <setting name="ProxyEnabled" serializeAs="String">
-                <value>true</value>
+                <value>False</value>
             </setting>
         </BetaBedsTests.Properties.Settings>
     </userSettings>
